# Personal-AI-Agents-Lab

./: README.md  main.py  pyproject.toml
Crew AI Framework/: README.md
Crew AI Framework/coder/output/: code_and_output.txt
Crew AI Framework/coder/src/coder/: crew.py
Crew AI Framework/debate/: README.md  pyproject.toml
Crew AI Framework/debate/output/: decide.md  oppose.md  propose.md
Crew AI Framework/debate/src/debate/: crew.py  main.py
Crew AI Framework/financial_researcher/: README.md  pyproject.toml
Crew AI Framework/financial_researcher/output/: report.md
Crew AI Framework/financial_researcher/src/financial_researcher/: crew.py  main.py
Crew AI Framework/software_engineering_team/: README.md  pyproject.toml
Crew AI Framework/software_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
Crew AI Framework/software_engineering_team/src/software_engineering_team/: crew.py  main.py
Crew AI Framework/software_engineering_team/src/software_engineering_team/config/: agents.yaml
Crew AI Framework/stock_picker/: pyproject.toml
Crew AI Framework/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
Crew AI Framework/stock_picker/output/: decision.md  research_report.json  trending_companies.json
Crew AI Framework/stock_picker/src/stock_picker/: crew.py
OpenAI-SDK/: README.md  main.ipynb
OpenAI-SDK/.ipynb_checkpoints/: main-checkpoint.ipynb
langGraph/: 01_starter_langgraph.ipynb  main.py  main_langgraph.ipynb  memory.db-shm  memory.db-wal
langGraph/.ipynb_checkpoints/: main-checkpoint.py
(+5 files in other folders)
