[project]
name = "agentic-frameworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gradio>=5.43.1",
    "html5lib>=1.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "lxml>=6.0.0",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
]
